# diff_sync

./: CMakeLists.txt  README.md  getBinaries.sh  main.cpp  results.xlsx
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-Release_MUTEX.mk  Makefile-Release_NONE.mk  Makefile-Release_SPIN.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-Release_MUTEX.bash  Package-Release_NONE.bash  Package-Release_SPIN.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml
